--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,3 +20,7 @@ artifacts:
     #- "my-app/build/**/*"
   base-directory: 'my-app/build'
   #discard-paths: yes
+
+  post_build: 
+    commands: 
+     - aws cloudfront create-invalidation --distribution-id E64FWF3JNI0FB --path /\*
