--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws cloudfront create-invalidation --destibution E64FWF3JNI0FB --paths '/*'"
   },
   "eslintConfig": {
     "extends": [
