fix the buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,26 +1,13 @@
-version: 0.2
+version: 0.2 
 
-phases:
-  install:
-    runtime-versions:
-      nodejs: 18
-  pre_build:
-    commands:
-      - cd my-app
-      - echo Installing source NPM dependencies...
-      - npm install
-  build:
-    commands:
-      - echo Build started on 'date'
-      - npm run build
-
-artifacts:
-  files:
-    - '**/*'
-    #- "my-app/build/**/*"
-  base-directory: 'my-app/build'
-  #discard-paths: yes
-
+phases: 
+  pre_build: 
+    commands: 
+      - npm install 
+  build: 
+    commands: 
+      - npm run build 
   post_build: 
     commands: 
-     - aws cloudfront create-invalidation --distribution-id E64FWF3JNI0FB --path /\*
+      - aws s3 cp --recursive ./build s3://infogen-labs.in-prod/
+      - aws cloudfront create-invalidation --distribution-id E3BN01EMAFQP67 --path "/*"
